BLM emergancy Patch

--- a/localisation/BLM_l_english.yml
+++ b/localisation/BLM_l_english.yml
@@ -109,7 +109,7 @@
  BLM_go_through_educational_reforms:0 "Educational Reforms"
  BLM_go_through_educational_reforms_desc:0 "An outdated system in which very few children, usually only those of noble lineage, receive a full education. This has, sadly, been in place for all of Lemuria's history. Together we must change this unequal system and educate our people. Not only for their own good but also for the collective good of all Lemurians."
  BLM_federal_lemuria:0 "Federal Lemuria!"
- BLM_federal_lemuria_desc:0 "It's time for us to declare our new federation; a federation of Lemurian republics. This will be a federation to unite Lemuria and to proclaim a new bastion of liberty and democracy."
+ BLM_federal_lemuria_desc:0 "It's time for us to deBLMre our new federation; a federation of Lemurian republics. This will be a federation to unite Lemuria and to proBLMim a new bastion of liberty and democracy."
  BLM_liberty_beacon:0 "Liberty Beacon!"
  BLM_liberty_beacon_desc:0 "As a monument to the new age of freedom we shall construct a beacon, one made from the finest materials with workers from all around Lemuria. A new monument for a new Lemuria."
  BLM_greatest_monument:0 "Grand Imperial Monument!"
@@ -176,3 +176,56 @@
  BLM_fascist_demagogue:0 "Shannon P. McCarthy"
  BLM_communist_revolutionary:0 "Edwin Bush"
  BLM_democratic_reformer:0 "Keir Wilkins"
+ #Kirans Emergancy Patch
+ BLM_army_effort:0 "Army Effort"
+ BLM_army_effort_desc:0 "Our army generals have some ideas that they would like to enact. We should give them the resources to bring about safety and security for our nation."
+ BLM_equipment_effort:0 "Equipment Effort"
+ BLM_equipment_effort_desc:0 "By providing modern equipment for our army we can improve our chances in the inevitable coming conflicts."
+ BLM_motorization_effort:0 "Motorization Effort"
+ BLM_motorization_effort_desc:0 "Our generals have also identified motorized vehicles as an important area for research."
+ BLM_doctrine_effort:0 "Doctrine Effort"
+ BLM_doctrine_effort_desc:0 "Our generals believe that there are many improvements still to be made in terms of our approach to warfare."
+ BLM_equipment_effort_2:0 "Equipment Effort 2"
+ BLM_equipment_effort_2_desc:0 "Further refinements can be made to our equipment, we are sure of it."
+ BLM_mechanization_effort:0 "Mechanization Effort"
+ BLM_mechanization_effort_desc:0 "By using our vehicles not only as transport, but also as armored escorts, we can drastically improve our troops' survivability in battle."
+ BLM_doctrine_effort_2:0 "Doctrine Effort 2"
+ BLM_doctrine_effort_2_desc:0 "Our generals have identified some flaws in our current military approach to warfare. They believe that we can improve this."
+ BLM_equipment_effort_3:0 "Equipment Effort 3"
+ BLM_equipment_effort_3_desc:0 "Our war materiel has improved much over the past while, but we have identified a few areas of improvement."
+ BLM_armor_effort:0 "Armor Effort"
+ BLM_armor_effort_desc:0 "The Great War showed the effectiveness of heavily armored, tracked vehicles. Our generals demand we produce some of our own."
+ BLM_special_forces:0 "Special Forces"
+ BLM_special_forces_desc:0 "Our troops must be generally prepared, but we can train a smaller cadre of troops to be especially prepared for challenging combat situations."
+ BLM_aviation_effort:0 "Aviation Effort"
+ BLM_aviation_effort_desc:0 "We should be able not only to attack by sea and by land... but by air as well!"
+ BLM_fighter_focus:0 "Fighter Focus"
+ BLM_fighter_focus_desc:0 "By focusing on fighter technologies we can prevent enemy aircraft from raining down bombs on our troops."
+ BLM_bomber_focus:0 "Bomber Focus"
+ BLM_bomber_focus_desc:0 "By focusing on bomber technologies we rain down bombs on our enemies' troops."
+ BLM_aviation_effort_2:0 "Aviation Effort 2"
+ BLM_aviation_effort_2_desc:0 "Now that our airforce is functioning, we have identified some areas for improvement."
+ BLM_CAS_effort:0 "CAS Effort"
+ BLM_CAS_effort_desc:0 "By learning to utilize our fighters as close air support we can more effectively attack and defend."
+ BLM_rocket_effort:0 "Rocket Effort"
+ BLM_rocket_effort_desc:0 "Rockets, and by extension jets, could bring our military a significant advantage in the skies above our nation... and above our enemies' nations."
+ BLM_NAV_effort:0 "Naval Bomber Effort"
+ BLM_NAV_effort_desc:0 "Our bombers have shown their usefulness over land... now we must make them just as effective against naval targets as well."
+ BLM_naval_effort:0 "Naval Effort"
+ BLM_naval_effort_desc:0 "The admirals require investment into our national navy. They report that they will be able to provide results soon if given the right amount of incentives."
+ BLM_flexible_navy:0 "Flexible Navy"
+ BLM_flexible_navy_desc:0 "We must maintain a flexible naval approach to respond to the ever changing situation at sea."
+ BLM_large_navy:0 "Large Navy"
+ BLM_large_navy_desc:0 "Any problem can be overcome with a sufficient amount of force. In this case, any naval problem can be solved by having a large navy."
+ BLM_submarine_effort:0 "Submarine Effort"
+ BLM_submarine_effort_desc:0 "Stealth and decisive attacks will allow our navy to stabilize our shipping lanes while disrupting those of our enemies."
+ BLM_cruiser_effort:0 "Cruiser Effort"
+ BLM_cruiser_effort_desc:0 "By building ships large enough and strong enough to deter raiders we can ensure the safety of our shipping lanes."
+ BLM_destroyer_effort:0 "Destroyer Effort"
+ BLM_destroyer_effort_desc:0 "We cannot wait while our enemies produce dangerous vessels like submarines - we must counteract them immediately with destroyers."
+ BLM_capital_ships_effort:0 "Capital Ships Effort"
+ BLM_capital_ships_effort_desc:0 "The backbone of the navy, capital ships. Without capital ships we would not last long in any kind of naval engagement."
+ 
+ 
+ 
+ 
