--- a/localisation/KUM_l_english.yml
+++ b/localisation/KUM_l_english.yml
@@ -47,6 +47,8 @@
  KUM_strong_monarch:0 "A Strong Monarchy"
  KUM_weak_monarch:0 "A Weak Monarchy"
  KUM_leaky_engine:0 "Inefficient Heavy Engines"
+ KUM_expel_media:0 "Domestic Propaganda"
+ KUM_blow_the_works_tt:0 "Free Pantiya Decisions"
  capitalists_win:0 "Capitalist Victory"
  mandalists_win:0 "Mandalist Victory"
  blow_boranepatera_infra:0 "Sabotage Boranepatera Infrastructure"
