--- a/localisation/TRS_l_english.yml
+++ b/localisation/TRS_l_english.yml
@@ -88,7 +88,7 @@
  TRS_japanese_zaibatsus:1 "Japanese Zaibatsus"
  TRS_japanese_zaibatsus_desc:1 "The heavy investment in our economy by the Japanese zaibatsus has allowed development that we could not have done for ourselves let alone have dreamed about. We will benefit from their strong guidance."
  TRS_kawasaki:1 "Kawasaki"
- TRS_kawasakidesc:1 "The Japanese zaibatsu that could help us with our naval expansion, Kawasaki, has demonstrated a willingness to open up offices in our nation. We must welcome them with open arms!"
+ TRS_kawasaki_desc:1 "The Japanese zaibatsu that could help us with our naval expansion, Kawasaki, has demonstrated a willingness to open up offices in our nation. We must welcome them with open arms!"
  TRS_tsetsai_naval_base:1 "Tsetsai Naval Base"
  TRS_tsetsai_naval_base_desc:1 "Japanese plans for the Austral Ocean will eventually require an advanced naval base in a position to provide support to ships there. Tsetsai is in a perfect location for this base."
  TRS_capital_naval_base:1 "Capital Naval Base"
