Down to less than 1800 errors

--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -31,6 +31,7 @@
  MUU_fascist_demagogue:0 "Tisam Tsillaq"
  MUU_communist_revolutionary:0 "Urujjun Tallasaj"
  MUU_democratic_reformer:0 "Gutrullat Ejjamsa"
+ MUU_quartermaster_general:0 "Naljan Uzamisha"
 
  01_MUU_tt:0 "§gUnlocks decisions to develop Dustartajare's Industrial Complex \n§ "
  01_MUU_marsh:0 "§gUnlocks decisions to reclaim land in the Sea of Hadu's marshes \n§ "
