--- a/localisation/replace/aml_strategic_region_names_l_english.yml
+++ b/localisation/replace/aml_strategic_region_names_l_english.yml
@@ -243,7 +243,7 @@
  STRATEGICREGION_242:0 "Sea of Cortez"
  STRATEGICREGION_243:0 "California Island"
  STRATEGICREGION_244:0 "Cascadia"
- STRATEGICREGION_245:0 "The Kolpo"
+ STRATEGICREGION_245:0 "Atlantis"
  STRATEGICREGION_246:1 "Kumari"
  STRATEGICREGION_247:1 "Great Mu Desert"
  STRATEGICREGION_248:1 "Manu Peninsula"
