--- a/localisation/replace/aml_strategic_region_names_l_english.yml
+++ b/localisation/replace/aml_strategic_region_names_l_english.yml
@@ -49,7 +49,7 @@
  STRATEGICREGION_48:0 "African Coast"
  STRATEGICREGION_49:0 "Frislandic Ridge"
  STRATEGICREGION_50:0 "Labrador Sea"
- STRATEGICREGION_51:0 "Eastern Atlantean Coast"
+ STRATEGICREGION_51:0 "Mid-Atlantic"
  STRATEGICREGION_52:0 "Gulf of Mexico"
  STRATEGICREGION_53:0 "Caribbean Sea"
  STRATEGICREGION_54:0 "Eastern Seaboard"
