--- a/localisation/aml_tech_l_english.yml
+++ b/localisation/aml_tech_l_english.yml
@@ -1005,23 +1005,23 @@
  PRJ_light_tank_artillery_equipment_2_desc:0 "The Shp/16-Yan is an specially equipt artilery piece that carries a heavy 130mm mortar on it."
  PRJ_light_tank_destroyer_equipment_2:0 "Sheeprana 16 - Bumietya Axiqan"
  PRJ_light_tank_destroyer_equipment_2_short:0 "Shp/16-Ban"
- PRJ_light_tank_destroyer_equipment_2_desc:0 "The Shp/16-Ban was a prototyped but never built tank destroyer project, deamed to unweildy by its test piliots and mechanicst stated its dificulty to maintain would be easier to just build a new one thant to repair it."
+ PRJ_light_tank_destroyer_equipment_2_desc:0 "The Shp/16-Ban was a prototyped but never built tank destroyer project, deamed to unweildy by its test pilots and mechanicst stated its dificulty to maintain would be easier to just build a new one thant to repair it."
  PRJ_light_tank_aa_equipment_2:0 "Sheeprana 16 - Kar-Hotwana"
  PRJ_light_tank_aa_equipment_2_short:0 "Shp/16-Kna"
- PRJ_light_tank_aa_equipment_2_desc:0 "A double 30mm anti-air automatic cannon mounted on a Pertanoona 16 chassis."
- #Errror
- PRJ_light_tank_equipment_3:0 "Burgusamin-Yenámirtal 500-Aŧehedeko-Čanak"
- PRJ_light_tank_equipment_3_short:0 "Bur-Yen/500-Az-Č"
- PRJ_light_tank_equipment_3_desc:0 "The Bur-Yen/500-Az-Č was a joint venture between Burgusamin Motor Company and Yenámirtal Motors. With the intent of equipping the colonial troops, the Texhepasak, the Bur-Yen/500-Az-Č was designed as a fast, lightly armored vehicle with large fuel tanks and wide tracks for operation in difficult terrains far from supply bases. Entered large scale production, but saw use only in the deserts of Lybia, where it proved itself a versatile and dependable vehicle."
- PRJ_light_tank_artillery_equipment_3:0 "Burgusamin-Yenámirtal 500-Hazeiŧakhedekrade"
- PRJ_light_tank_artillery_equipment_3_short:0 "Bur-Yen/500-Hzi"
- PRJ_light_tank_artillery_equipment_3_desc:0 "The Bur-Yen/500-Hzi was a tank designed for use in urban environments. The only difference between it and the tank it derives from is the slightly enlarged turret, which features a short 100mm mortar."
- PRJ_light_tank_destroyer_equipment_3:0 "Burgusamin-Yenámirtal 500-Hapansexŧerrade"
- PRJ_light_tank_destroyer_equipment_3_short:0 "Bur-Yen/500-Hps"
- PRJ_light_tank_destroyer_equipment_3_desc:0 "After the Lybian action, the Bur-Yen/500-Az-Č gained a reputation as a cheap and versatile platform, which prompted several variations to be proposed. The Bur-Yen/500-Hps has the turret substituted by an unprotected 75mm cannon. It is intended to be quickly deployed to regions inaccessible to regular tanks and operate as an ambush anti-tank platform."
- PRJ_light_tank_aa_equipment_3:0 "Burgusamin-Yenámirtal 500-Haéirsexpleinrade"
- PRJ_light_tank_aa_equipment_3_short:0 "Bur-Yen/500-Hés"
- PRJ_light_tank_aa_equipment_3_desc:0 "The anti-air variant of the Bur-Yen/500-Az-Č. Two automatic cannons fire proximity-fused shells from a rapidly rotating turret. Like its tank predecessor, it features a stabilized gun."
+ PRJ_light_tank_aa_equipment_2_desc:0 "A double 30mm anti-air automatic cannon mounted on a Sheeprana 16 chassis."
+
+ PRJ_light_tank_equipment_3:0 "Tatanma 18 - Manasiwe"
+ PRJ_light_tank_equipment_3_short:0 "Manasiwe"
+ PRJ_light_tank_equipment_3_desc:0 "The Manasiwe was a prototyped but sent into full production light tank project as more powerful tanks were"
+ PRJ_light_tank_artillery_equipment_3:0 "Tatanma 18 - Tigardy Axiqan"
+ PRJ_light_tank_artillery_equipment_3_short:0 "Tat/18-Yan"
+ PRJ_light_tank_artillery_equipment_3_desc:0 "The Tat/18-Yan was a tank designed for use in urban environments. The only difference between it and the tank it derives from is the slightly enlarged turret, which features a short 100mm mortar."
+ PRJ_light_tank_destroyer_equipment_3:0 "Tatanma 18 - Bumietya Axiqan"
+ PRJ_light_tank_destroyer_equipment_3_short:0 "Tat/18-Ban"
+ PRJ_light_tank_destroyer_equipment_3_desc:0 "The Tat/18-Ban is a modified Tatanma 7 with its turret substituted by a 80mm cannon fitted into a vertical mantlet."
+ PRJ_light_tank_aa_equipment_3_short:0 "Tat/18-Kna"
+ PRJ_light_tank_aa_equipment_3_desc:0 "A double 50mm anti-air automatic cannon mounted on a Manasiwe 18 chassis."
+ 
  PRJ_medium_tank_equipment_1:0 "Juzatzhait 001-Aħaŧehedekto"
  PRJ_medium_tank_equipment_1_short:0 "Juz/001-Aħz"
  PRJ_medium_tank_equipment_1_desc:0 "Produced from 1940 to 1942, the Juz/001-Aħz was multipurpose tank meant to support the heavier Gud/023-Hag. A smaller gun and a lighter chassis meant that this tank could fill in the gaps of an armored formation more easily and react faster to sudden changes on the battlefield."
@@ -1118,12 +1118,6 @@
  PRJ_modern_tank_aa_equipment_1:0 "Juzatzhait-Wotarnial 1001-Haéirsexpleinrade"
  PRJ_modern_tank_aa_equipment_1_short:0 "Juz-Wot/1001-Hés"
  PRJ_modern_tank_aa_equipment_1_desc:0 "The Juz-Wot/1001-Hés was the first self-propelled anti-air platform to incorporate a radar into it. Had a great success into a variety of roles, and was in service from 1952 up until 1991."
- PRJ_amphibious_tank_equipment_1:0 "Burgusamin 381-Zeówukazhedek-Aŧehedeko"
- PRJ_amphibious_tank_equipment_1_short:0 "Bur/381-ZóAz"
- PRJ_amphibious_tank_equipment_1_desc:0 "Pushed by the prospect of an amphibious operation in the German occupied territories, the Bur/381-ZóAz was the first attempt at making an amphibious landing vehicle, alongside its machine gun armed variant, the Bur/381-ZóHg"
- PRJ_amphibious_tank_equipment_2:0 "Juzatzhait 881-Hapoakrade-Tumutúnkixe"
- PRJ_amphibious_tank_equipment_2_short:0 "Juz/881-HpTm"
- PRJ_amphibious_tank_equipment_2_desc:0 "The Juz/881-HpTm was the vehicle of choice for the Atlantean Armed Forces for invading heavily defended beaches. Huge in size, most of it was empty space for flotation, but this space doubled as an efficient protection against shaped charges."
  PRJ_fighter_equipment_0:0 "Wright-Asorsak Model 3 Żavók"
  PRJ_fighter_equipment_0_short:0 "Wri-Aso 3 Żavók"
  PRJ_fighter_equipment_0_desc:0 "The Żavók was the first airplane to enter service into the then neglected Atlantean Air Force. Woefully inadequate for its time, it was maintained in service until the years prior to the outbreak of the World War 2."
