--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -523,6 +523,55 @@
  ATL_fascist_demagogue:0 "Arvisip Nażemut"
  ATL_communist_revolutionary:0 "Ŧerxu Ežnat"
  
+ ATL_Biroze_Kavris:0 "Biroze Kavris"
+ ATL_Zannaz_Terzha:0 "Zannaz Terža"
+ ATL_Shava_Valliz:0 "Xava Valliz"
+ ATL_Naizaretal:0 "Emperor Naizaretal"
+ #MilCom
+ ATL_Auvizumon_Vannezik:0 "Auvizumon Vannezik"
+ ATL_Takez_Vazilake:0 "Takez Valzilake"
+ ATL_Oviron_Muziviz:0 "Oviron Muziviz"
+ ATL_Baurizo_Nunnaka:0 "Baurizo Nunnaka"
+ ATL_Tunnaton_Dorvanev:0 "Tunnaton Dorvanev"
+ #NavCom
+ ATL_Klistran_Frestiak:0 "Klistran Frestiak"
+ ATL_Lenistur_Polistkamal:0 "Lenistur Polistkamal"
+ ATL_Whedunt_Gromstinak:0 "Whedunt Gromstinak"
+ ATL_Erstama_Hurdnial:0 "Erstama Ħurdnial"
+ ATL_Meran_Jelastiek:0 "Merán Jelastiek"
+ ATL_Jestitze_Munurak:0 "Jestiŧe Munurak"
+ 
+ 
+ ATL_silent_workhorse:0 "Aton Živin"
+ ATL_war_industrialist:0 "Meztulon Muzinal"
+ ATL_backroom_backstabber:0 "Naxgetal Undreč"
+ ATL_prince_of_terror:0 "Troskip Lortensinatez"
+ ATL_armaments_organizer:0 "Stimaztol Utiskaraz"
+ ATL_democratic_politician:0 "Debnilat Ħastimalak"
+ ATL_fascist_demagogue:0 "Arvisip Nażemut"
+ ATL_communist_revolutionary:0 "Ŧerxu Ežnat"
+ ATL_grand_fleet_proponent:0 "Girion Tanŧeč"
+ ATL_victory_through_airpower:0 "Neztunon Begiże"
+ ATL_rocket_scientist:0 "Erguld Juntamet"
+ ATL_naval_theorist:0 "Deinstaman Hurdia"
+ ATL_military_theorist:0 "Lażiskia Arranek"
+ ATL_army_chief_morale_2:0 "Aleinta Nustiumek"
+ ATL_army_chief_offensive_2:0 "Nemistiua Laskimert"
+ ATL_army_chief_drill_2:0 "Kintakaz Urrimikiel"
+ ATL_army_chief_planning_2:0 "Karakistal Nixal"
+ ATL_navy_naval_air_defense_2:0 "Woskitun Allamskal"
+ ATL_navy_fleet_logistics_3:0 "Jusemiz Priskan"
+ ATL_navy_chief_decisive_battle_3:0 "Miltiaz Ludriska"
+ ATL_navy_chief_maneuver_3:0 "Uorun Hentik"
+ ATL_air_strategic_bombing_2:0 "Etialan Hurtadak"
+ ATL_air_chief_old_guard:0 "Kesza Zemtadiaz"
+ ATL_air_strategic_bombing_1:0 "Anuika Numskital"
+ ATL_navy_screen_2:0 "Jal Tanaz"
+ ATL_army_regrouping_1:0 "Likiert Kizakal"
+ ATL_navy_capital_ship_3:0 "Pliskotan Miekzi"
+ ATL_air_naval_strike_1:0 "Hierkon Mullam"
+ ATL_navy_carrier_2:0 "Origunan Thiaskia"
+ 
  
  ATL_kaprastiak_war_category:0 "War on the Kaprastiak"
  ATL_itorkanak_war_category:0 "War on the Itorkanak"
