--- a/localisation/aml_tech_l_english.yml
+++ b/localisation/aml_tech_l_english.yml
@@ -602,22 +602,22 @@
   ######################################################################################################################################################################################################################
  
  
- MUU_infantry_equipment_0:0 "Karbain-Sorgonak"
- MUU_infantry_equipment_0_short:0 "Ka-Sor"
- MUU_infantry_equipment_0_desc:0 "The Ka-Sor was a long rifle produced by Sorgonak Arms since 1902. Already obsolete, it still saw usage by the Atlantean army and was commonly seen being used by Itorkanak goons."
- MUU_infantry_equipment_1:0 "Karfetekbain-Sorgonak"
- MUU_infantry_equipment_1_short:0 "Kf-Sor"
- MUU_infantry_equipment_1_desc:0 "A semi-automatic rifle, it was produced in mass quantities shortly before the Second World War to bring the backwards Atlantean Army to equal footing to other armies in the world."
- MUU_infantry_equipment_2:0 "11-Račanakŧarane"
- MUU_infantry_equipment_2_short:0 "11-Rč"
- MUU_infantry_equipment_2_desc:0 "The only submachinegun to equip the Atlantean army, it was generally liked by its users, and quickly gained adoption by the police and criminals alike."
- MUU_infantry_equipment_3:0 "61-Karfetekbain-Kóakak"
- MUU_infantry_equipment_3_short:0 "61-Kf-K"
- MUU_infantry_equipment_3_desc:0 "The 61-Kf-K was the hybrid of a light machine gun and an automatic rifle. With a 50-round standard magazine, it was light enough to be used by the average infantryman, although it had a tendency of overheating quickly, limiting its usage in the support role."
- MUU_infantry_at:0 "19-Karpansexŧerbain"
- MUU_infantry_at_desc:0 "The 19-Karpansexŧerbain was a spring-loaded shaped charge launcher meant to be supported by the hips of the shooter. Not very practical and generally disliked by its users, it saw limited use, and quickly substituted by the much more modern 59-Uniħutrakitdune."
- MUU_infantry_at2:0 "59-Uniħutrakitdune"
- MUU_infantry_at2_desc:0 "The 59-Uniħutrakitdune launched a lightweight HEAT rocket that could penetrate up to 160mm of steel. Produced in large quantities, it equipped every Atlantean infantry division by the end of the World War 2."
+ MUU_infantry_equipment_0:0 "Mashiqit 8 Anshaj"
+ MUU_infantry_equipment_0_short:0 "M8-Anshaj"
+ MUU_infantry_equipment_0_desc:0 "The M8-Anshaj was the shortened version of an older waterproof rifle called M8. It was widely used by the Muror army due to its versatility and adequacy in the marsh terrain that comprises most of the important cities of the country."
+ MUU_infantry_equipment_1:0 "Mashiqit 12"
+ MUU_infantry_equipment_1_short:0 "M12"
+ MUU_infantry_equipment_1_desc:0 "This straight-pull bolt action rifle was an improvement over the M8, incorporating better sights and longer barrel, but keeping the same 6.7 mm waterproof ammunition."
+ MUU_infantry_equipment_2:0 "Mashiqit 11 Pigaj"
+ MUU_infantry_equipment_2_short:0 "M11-Pigaj"
+ MUU_infantry_equipment_2_desc:0 "A simple submachinegun employed by the army in conjunction with the M12. An older design, it took longer than expected to enter production and only saw action in smaller conflicts in Mu, mainly in the north of the continent by communist guerrillas."
+ MUU_infantry_equipment_3:0 "Mashiqit 18 Pigaj Anguri"
+ MUU_infantry_equipment_3_short:0 "M18-PA"
+ MUU_infantry_equipment_3_desc:0 "The heavy but versatile M18-PA was a rotating-bolt blowback-operated battle rifle featuring 18-round magazine in the top of the gun. It could be converted to a belt fed machinegun with a few modifications done in the field."
+ MUU_infantry_at:0 "Mashiqit 13 Nanabaril"
+ MUU_infantry_at_desc:0 "The M13-Nb was a large rifle loaded with cermet core rounds, and made up the bulk of the infantry anti-tank capabilities for the Muror army. Even though not very powerful, the hard terrain of the country didn't make the threat of tanks very plausible, and the rifle was mainly used against light armor, where it excelled."
+ MUU_infantry_at2:0 "Raqit 2 Nanabaril 'Ahushjeq'"
+ MUU_infantry_at2_desc:0 "The Ahushjeq, Tilmu for 'arrow', was a powerful short ranged recoilless rifle that equipped the Muror army shortly after the end of the World War 2. It had a small bipod to help the shooter to aim."
  MUU_artillery_equipment_1:0 "18-Kanon/100mm"
  MUU_artillery_equipment_1_short:0 "18-Ka/100"
  MUU_artillery_equipment_2:0 "38-Kanon/105mm"
