--- a/localisation/aml_tech_l_english.yml
+++ b/localisation/aml_tech_l_english.yml
@@ -618,27 +618,27 @@
  MUU_infantry_at_desc:0 "The M13-Nb was a large rifle loaded with cermet core rounds, and made up the bulk of the infantry anti-tank capabilities for the Muror army. Even though not very powerful, the hard terrain of the country didn't make the threat of tanks very plausible, and the rifle was mainly used against light armor, where it excelled."
  MUU_infantry_at2:0 "Raqit 2 Nanabaril 'Ahushjeq'"
  MUU_infantry_at2_desc:0 "The Ahushjeq, Tilmu for 'arrow', was a powerful short ranged recoilless rifle that equipped the Muror army shortly after the end of the World War 2. It had a small bipod to help the shooter to aim."
- MUU_artillery_equipment_1:0 "18-Kanon/100mm"
- MUU_artillery_equipment_1_short:0 "18-Ka/100"
- MUU_artillery_equipment_2:0 "38-Kanon/105mm"
- MUU_artillery_equipment_2_short:0 "38-Ka/105"
- MUU_artillery_equipment_3:0 "88-Bamħutekbe/350mm"
- MUU_artillery_equipment_3_short:0 "88-Bħ/350"
- MUU_anti_air_equipment_1:0 "21-Raéirsexpleinŧarane/25mm"
- MUU_anti_air_equipment_1_short:0 "21-Rés/25"
+ MUU_artillery_equipment_1:0 "75mm Hauijer Model 4"
+ MUU_artillery_equipment_1_short:0 "75H4"
+ MUU_artillery_equipment_2:0 "100mm Hauijer Model 7"
+ MUU_artillery_equipment_2_short:0 "100H7"
+ MUU_artillery_equipment_3:0 "150mm Ðurdihauijer Model 2"
+ MUU_artillery_equipment_3_short:0 "150ÐH2"
+ MUU_anti_air_equipment_1:0 "Nanajesaj"
+ MUU_anti_air_equipment_1_short:0 ""
  MUU_anti_air_equipment_2:0 "26-Raéirsexpleinŧarane/25mm/4"
  MUU_anti_air_equipment_2_short:0 "26-Rés/25/4"
  MUU_anti_air_equipment_3:0 "46-Kaéirsexpleinnon/90mm"
  MUU_anti_air_equipment_3_short:0 "46-Kés/90"
- MUU_anti_tank_equipment_1:0 "17-Kapansexŧernon/75mm"
+ MUU_anti_tank_equipment_1:0 "Nanabaril"
  MUU_anti_tank_equipment_1_short:0 "17-Kps/75"
  MUU_anti_tank_equipment_2:0 "47-Kapansexŧernon/100mm"
  MUU_anti_tank_equipment_2_short:0 "47-Kps/100"
  MUU_anti_tank_equipment_3:0 "57-Kapansexŧernon/105mm"
  MUU_anti_tank_equipment_3_short:0 "57-Kps/105"
- MUU_rocket_artillery_equipment_1:0 "1/08-Ħutrakit"
+ MUU_rocket_artillery_equipment_1:0 "Raqit"
  MUU_rocket_artillery_equipment_1_short:0 "1/08-Ħr"
- MUU_rocket_artillery_equipment_2:0 "1/98-Ħutrakit"
+ MUU_rocket_artillery_equipment_2:0 ""
  MUU_rocket_artillery_equipment_2_short:0 "1/98-Ħr"
  MUU_motorized_equipment_1:0 "Yenámirtal 112"
  MUU_motorized_equipment_1_short:0 "Yen/112"
