FMU Company Names and Logos

--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -1,4 +1,23 @@
 ﻿l_english:
+ FMU_heavy_tank_manufacturer:0 "Blaudeutsche Panzerfahrzeuge"
+ FMU_fast_tank_manufacturer:0 "N.D.K.U."
+ FMU_med_tank_manufacturer:0 "Heilman & Obst"
+ FMU_generic_tank_manufacturer:0 "Panzerwerk Ottostadt"
+ FMU_royal_hellenic_naval_shipyard:0 "Nibelunge Schiffswerke"
+ FMU_pacific_fleet_naval_manufacturer:0 "Schwarzewelle"
+ FMU_battlefleet_designer:0 "Klugman & Frinz"
+ FMU_private_shipyards:0 "Ziegelhafen"
+ FMU_gnaf:0 "Messerschmitt Südstelle"
+ FMU_naval_aircraft_manufacturer:0 "Marineritter"
+ FMU_heavy_aircraft_manufacturer:0 "Wolkenberg"
+ FMU_medium_aircraft_manufacturer:0 "Geißner Flugzeugbau"
+ FMU_infantry_equipment_manufacturer:0 "Hußet"
+ FMU_artillery_manufacturer:0 "Artilleriewerke Rabau"
+ FMU_motorized_manufacturer:0 "Silberautos"
+ FMU_refinery_concern:0 "Neue Volkswerft"
+ FMU_electronics_concern:0 "Schmidt & Lange"
+ FMU_industrial_concern:0 "Teuer & Tinser"
+
  FMU_neutrality_party_kaiser_long:0 "House Hohenzollern"
  FMU_neutrality_party_kaiser:0 "House Hohenzollern"
  FMU_broke_versailles:0 "Rejected Treaty of Versailles"
