--- a/localisation/aml_tech_l_english.yml
+++ b/localisation/aml_tech_l_english.yml
@@ -603,39 +603,39 @@
  
  
  MUU_infantry_equipment_0:0 "Mashiqit 8 Anshaj"
- MUU_infantry_equipment_0_short:0 "M8-Anshaj"
- MUU_infantry_equipment_0_desc:0 "The M8-Anshaj was the shortened version of an older waterproof rifle called M8. It was widely used by the Muror army due to its versatility and adequacy in the marsh terrain that comprises most of the important cities of the country."
+ MUU_infantry_equipment_0_short:0 "M10-Anshaj"
+ MUU_infantry_equipment_0_desc:0 "The M10-Anshaj was the shortened version of an older waterproof rifle called M8. It was widely used by the Muror army due to its versatility and adequacy in the marsh terrain that comprises most of the important cities of the country."
  MUU_infantry_equipment_1:0 "Mashiqit 12"
  MUU_infantry_equipment_1_short:0 "M12"
  MUU_infantry_equipment_1_desc:0 "This straight-pull bolt action rifle was an improvement over the M8, incorporating better sights and longer barrel, but keeping the same 6.7 mm waterproof ammunition."
  MUU_infantry_equipment_2:0 "Mashiqit 11 Pigaj"
  MUU_infantry_equipment_2_short:0 "M11-Pigaj"
  MUU_infantry_equipment_2_desc:0 "A simple submachinegun employed by the army in conjunction with the M12. An older design, it took longer than expected to enter production and only saw action in smaller conflicts in Mu, mainly in the north of the continent by communist guerrillas."
- MUU_infantry_equipment_3:0 "Mashiqit 18 Pigaj Anguri"
- MUU_infantry_equipment_3_short:0 "M18-PA"
- MUU_infantry_equipment_3_desc:0 "The heavy but versatile M18-PA was a rotating-bolt blowback-operated battle rifle featuring 18-round magazine in the top of the gun. It could be converted to a belt fed machinegun with a few modifications done in the field."
+ MUU_infantry_equipment_3:0 "Mashiqit 20 Pigaj Anguri"
+ MUU_infantry_equipment_3_short:0 "M20-PA"
+ MUU_infantry_equipment_3_desc:0 "The heavy but versatile M20-PA was a rotating-bolt blowback-operated battle rifle featuring 18-round magazine in the top of the gun. It could be converted to a belt fed machinegun with a few modifications done in the field."
  MUU_infantry_at:0 "Mashiqit 13 Nanabaril"
  MUU_infantry_at_desc:0 "The M13-Nb was a large rifle loaded with cermet core rounds, and made up the bulk of the infantry anti-tank capabilities for the Muror army. Even though not very powerful, the hard terrain of the country didn't make the threat of tanks very plausible, and the rifle was mainly used against light armor, where it excelled."
  MUU_infantry_at2:0 "Raqit 2 Nanabaril 'Ahushjeq'"
  MUU_infantry_at2_desc:0 "The Ahushjeq, Tilmu for 'arrow', was a powerful short ranged recoilless rifle that equipped the Muror army shortly after the end of the World War 2. It had a small bipod to help the shooter to aim."
- MUU_artillery_equipment_1:0 "75mm Hauijer Model 4"
- MUU_artillery_equipment_1_short:0 "75H4"
+ MUU_artillery_equipment_1:0 "75mm Hauijer Model 2"
+ MUU_artillery_equipment_1_short:0 "75H-2"
  MUU_artillery_equipment_2:0 "100mm Hauijer Model 7"
- MUU_artillery_equipment_2_short:0 "100H7"
- MUU_artillery_equipment_3:0 "150mm Ðurdihauijer Model 2"
- MUU_artillery_equipment_3_short:0 "150ÐH2"
- MUU_anti_air_equipment_1:0 "Nanajesaj"
- MUU_anti_air_equipment_1_short:0 ""
- MUU_anti_air_equipment_2:0 "26-Raéirsexpleinŧarane/25mm/4"
- MUU_anti_air_equipment_2_short:0 "26-Rés/25/4"
- MUU_anti_air_equipment_3:0 "46-Kaéirsexpleinnon/90mm"
- MUU_anti_air_equipment_3_short:0 "46-Kés/90"
- MUU_anti_tank_equipment_1:0 "Nanabaril"
- MUU_anti_tank_equipment_1_short:0 "17-Kps/75"
- MUU_anti_tank_equipment_2:0 "47-Kapansexŧernon/100mm"
- MUU_anti_tank_equipment_2_short:0 "47-Kps/100"
- MUU_anti_tank_equipment_3:0 "57-Kapansexŧernon/105mm"
- MUU_anti_tank_equipment_3_short:0 "57-Kps/105"
+ MUU_artillery_equipment_2_short:0 "100H-7"
+ MUU_artillery_equipment_3:0 "150mm Ðurdihauijer Model 4"
+ MUU_artillery_equipment_3_short:0 "150ÐH-4"
+ MUU_anti_air_equipment_1:0 "20mm Nanajesajmashiqit Model 14"
+ MUU_anti_air_equipment_1_short:0 "20NM-14"
+ MUU_anti_air_equipment_2:0 "20mm Nanajesaj Sesemashqit Model 16"
+ MUU_anti_air_equipment_2_short:0 "20N4M-16"
+ MUU_anti_air_equipment_3:0 "45mm Nanajesaj Sehauijer Model 33"
+ MUU_anti_air_equipment_3_short:0 "45N2H-33"
+ MUU_anti_tank_equipment_1:0 "50mm Nanabarilhauijer 44-calibers Model 8"
+ MUU_anti_tank_equipment_1_short:0 "50NH44-8"
+ MUU_anti_tank_equipment_2:0 "70mm Nanabarilhauijer 40-calibers Model 12"
+ MUU_anti_tank_equipment_2_short:0 "70NH40-12"
+ MUU_anti_tank_equipment_3:0 "90mm Nanabarilhauijer 78-calibers Model 53"
+ MUU_anti_tank_equipment_3_short:0 "90NH78-53"
  MUU_rocket_artillery_equipment_1:0 "Raqit"
  MUU_rocket_artillery_equipment_1_short:0 "1/08-Ħr"
  MUU_rocket_artillery_equipment_2:0 ""
