Decriptors for Adamooka Please

--- a/localisation/aml_decisions_l_english.yml
+++ b/localisation/aml_decisions_l_english.yml
@@ -77,5 +77,5 @@
  blow_andamooka_canal:0 "Blow up Andamooka Canal"
  blow_andamooka_canal_desc:0 "words"
  rebuild_andamooka_canal:0 "Rebuild Andamooka Canal"
- rebuild_andamooka_canal_desc:0 "nerd words"
+ rebuild_andamooka_canal_desc:0 "nerd words" #Thursa over HEre
  
