--- a/localisation/aml_tech_l_english.yml
+++ b/localisation/aml_tech_l_english.yml
@@ -984,80 +984,81 @@
  #Satnamwa - Light
  #Metasnwa - Medium
  #Hamanulsa - Heavy
- PRJ_light_tank_equipment_1:0 "Pertanoona 7 - Phronsa"
+ PRJ_light_tank_equipment_1:0 "Satnamwa 7 - Phronsa"
  PRJ_light_tank_equipment_1_short:0 "Phronsa"
- PRJ_light_tank_equipment_1_desc:0 "The Pertanoona 7 - Phronsa first introduced in 1938 and the first tank light tanks to see operations on the front lines ."
- PRJ_light_tank_artillery_equipment_1:0 "Pertanoona 7 - Tigardy Axiqan"
- PRJ_light_tank_artillery_equipment_1_short:0 "P7/Yan"
- PRJ_light_tank_artillery_equipment_1_desc:0 "The P7/Yan is a short 3in cannon bolted over a  Pertanoona 7 chassis."
- PRJ_light_tank_destroyer_equipment_1:0 "Pertanoona 7 - Bumietya Axiqan "
- PRJ_light_tank_destroyer_equipment_1_short:0 "P7/Ban "
- PRJ_light_tank_destroyer_equipment_1_desc:0 "The P7/Ban is a modified Pertanoona 7 with its turret substituted by a 40mm cannon fitted into a vertical mantlet."
- PRJ_light_tank_aa_equipment_1:0 "Pertanoona 7 - Kar-Hotwana "
- PRJ_light_tank_aa_equipment_1_short:0 "P7/Kna"
- PRJ_light_tank_aa_equipment_1_desc:0 "An anti-air cannon mounted on the chassis of a  Pertanoona 7."
+ PRJ_light_tank_equipment_1_desc:0 "The Satnamwa 7 - Phronsa first introduced in 1938 and the first tank light tanks to see operations on the front lines ."
+ PRJ_light_tank_artillery_equipment_1:0 "Satnamwa 7 - Tigardy Axiqan"
+ PRJ_light_tank_artillery_equipment_1_short:0 "Saa/7-Yan"
+ PRJ_light_tank_artillery_equipment_1_desc:0 "The Saa 7/Yan is a short 3in cannon bolted over a  Satnamwa 7 chassis."
+ PRJ_light_tank_destroyer_equipment_1:0 "Satnamwa 7 - Bumietya Axiqan "
+ PRJ_light_tank_destroyer_equipment_1_short:0 "Saa/7-Ban "
+ PRJ_light_tank_destroyer_equipment_1_desc:0 "The Saa 7/Ban is a modified Satnamwa 7 with its turret substituted by a 40mm cannon fitted into a vertical mantlet."
+ PRJ_light_tank_aa_equipment_1:0 "Satnamwa 7 - Kar-Hotwana "
+ PRJ_light_tank_aa_equipment_1_short:0 "Saa/7-Kna"
+ PRJ_light_tank_aa_equipment_1_desc:0 "An anti-air cannon mounted on the chassis of a  Satnamwa 7."
  
- PRJ_light_tank_equipment_2:0 "Pertanoona 16 - Sheeprana "
+ PRJ_light_tank_equipment_2:0 "Satnamwa 16 - Sheeprana "
  PRJ_light_tank_equipment_2_short:0 "Sheeprana"
  PRJ_light_tank_equipment_2_desc:0 "The Sheeprana is a very well-rounded light tank. Its speed and weight made it very suitable towards the frontlines of the jungles of the Congo.
- PRJ_light_tank_artillery_equipment_2:0 "Sheeprana 16 - Tigardy Axiqan"
- PRJ_light_tank_artillery_equipment_2_short:0 "Shp/16-Yan"
- PRJ_light_tank_artillery_equipment_2_desc:0 "The Shp/16-Yan is an specially equipt artilery piece that carries a heavy 130mm mortar on it."
- PRJ_light_tank_destroyer_equipment_2:0 "Sheeprana 16 - Bumietya Axiqan"
- PRJ_light_tank_destroyer_equipment_2_short:0 "Shp/16-Ban"
- PRJ_light_tank_destroyer_equipment_2_desc:0 "The Shp/16-Ban was a prototyped but never built tank destroyer project, deamed to unweildy by its test pilots and mechanicst stated its dificulty to maintain would be easier to just build a new one thant to repair it."
- PRJ_light_tank_aa_equipment_2:0 "Sheeprana 16 - Kar-Hotwana"
- PRJ_light_tank_aa_equipment_2_short:0 "Shp/16-Kna"
- PRJ_light_tank_aa_equipment_2_desc:0 "A double 30mm anti-air automatic cannon mounted on a Sheeprana 16 chassis."
+ PRJ_light_tank_artillery_equipment_2:0 "Satnamwa 16 - Tigardy Axiqan"
+ PRJ_light_tank_artillery_equipment_2_short:0 "Saa/16-Yan"
+ PRJ_light_tank_artillery_equipment_2_desc:0 "The Saa/16-Yan is an specially equipt artilery piece that carries a heavy 130mm mortar on it."
+ PRJ_light_tank_destroyer_equipment_2:0 "Satnamwa 16 - Bumietya Axiqan"
+ PRJ_light_tank_destroyer_equipment_2_short:0 "Saa/16-Ban"
+ PRJ_light_tank_destroyer_equipment_2_desc:0 "The Shp/16-Ban was a prototyped but never built tank destroyer project, deamed to unweildy by its test pilots and mechanicst stated its dificulty to maintain would be easier to just build a new one than to repair it."
+ PRJ_light_tank_aa_equipment_2:0 "Satnamwa 16 - Kar-Hotwana"
+ PRJ_light_tank_aa_equipment_2_short:0 "Saa/16-Kna"
+ PRJ_light_tank_aa_equipment_2_desc:0 "A double 30mm anti-air automatic cannon mounted on a Satnamwa 16 chassis."
 
- PRJ_light_tank_equipment_3:0 "Tatanma 18 - Manasiwe"
+ PRJ_light_tank_equipment_3:0 "Satnamwa 18 - Manasiwe"
  PRJ_light_tank_equipment_3_short:0 "Manasiwe"
- PRJ_light_tank_equipment_3_desc:0 "The Manasiwe was a prototyped but sent into full production light tank project as more powerful tanks were"
- PRJ_light_tank_artillery_equipment_3:0 "Tatanma 18 - Tigardy Axiqan"
- PRJ_light_tank_artillery_equipment_3_short:0 "Tat/18-Yan"
- PRJ_light_tank_artillery_equipment_3_desc:0 "The Tat/18-Yan was a tank designed for use in urban environments. The only difference between it and the tank it derives from is the slightly enlarged turret, which features a short 100mm mortar."
- PRJ_light_tank_destroyer_equipment_3:0 "Tatanma 18 - Bumietya Axiqan"
- PRJ_light_tank_destroyer_equipment_3_short:0 "Tat/18-Ban"
- PRJ_light_tank_destroyer_equipment_3_desc:0 "The Tat/18-Ban is a modified Tatanma 7 with its turret substituted by a 80mm cannon fitted into a vertical mantlet."
- PRJ_light_tank_aa_equipment_3_short:0 "Tat/18-Kna"
+ PRJ_light_tank_equipment_3_desc:0 "The Manasiwe was a prototyped but sent into full production light tank project as more powerful tanks were begining to be fieled to counter the Anglo-Atlantean Armor in the Northern Fronts"
+ PRJ_light_tank_artillery_equipment_3:0 "Satnamwa 18 - Tigardy Axiqan"
+ PRJ_light_tank_artillery_equipment_3_short:0 "Saa/18-Yan"
+ PRJ_light_tank_artillery_equipment_3_desc:0 "The Saa/18-Yan was a tank designed for use in urban environments. The only difference between it and the tank it derives from is the slightly enlarged turret, which features a short 100mm mortar."
+ PRJ_light_tank_destroyer_equipment_3:0 "Satnamwa 18 - Bumietya Axiqan"
+ PRJ_light_tank_destroyer_equipment_3_short:0 "Saa/18-Ban"
+ PRJ_light_tank_destroyer_equipment_3_desc:0 "The Saa/18-Ban is a modified Tatanma 18 with its turret substituted by a 80mm cannon fitted into a vertical mantlet."
+ PRJ_light_tank_aa_equipment_3:0 "Satnamwa 18 - Kar-Hotwana"
+ PRJ_light_tank_aa_equipment_3_short:0 "Saa/18-Kna"
  PRJ_light_tank_aa_equipment_3_desc:0 "A double 50mm anti-air automatic cannon mounted on a Manasiwe 18 chassis."
  
- PRJ_medium_tank_equipment_1:0 "Juzatzhait 001-Aħaŧehedekto"
- PRJ_medium_tank_equipment_1_short:0 "Juz/001-Aħz"
- PRJ_medium_tank_equipment_1_desc:0 "Produced from 1940 to 1942, the Juz/001-Aħz was multipurpose tank meant to support the heavier Gud/023-Hag. A smaller gun and a lighter chassis meant that this tank could fill in the gaps of an armored formation more easily and react faster to sudden changes on the battlefield."
- PRJ_medium_tank_artillery_equipment_1:0 "Juzatzhait 001-Hakanonrade"
- PRJ_medium_tank_artillery_equipment_1_short:0 "Juz/001-Hk"
- PRJ_medium_tank_artillery_equipment_1_desc:0 "The Juz/001-Hk is the SPG variant of the Juz/001-Aħz tank. It carries a 100mm short cannon. Saw limited usage in 1944 in France."
- PRJ_medium_tank_destroyer_equipment_1:0 "Juzatzhait 001-Hasexkiuxpanŧerade"
- PRJ_medium_tank_destroyer_equipment_1_short:0 "Juz/001-Hskp"
- PRJ_medium_tank_destroyer_equipment_1_desc:0 "The Juz/001-Hskp was a tank destroyer project. Never built, and is only known from blueprints."
- PRJ_medium_tank_aa_equipment_1:0 "Juzatzhait 001-Haéirsexpleinrade"
- PRJ_medium_tank_aa_equipment_1_short:0 "Juz/001-Hés"
- PRJ_medium_tank_aa_equipment_1_desc:0 "Two 20mm cannons fitted in a rotating partially protected turret mounted over a Juz/001-Hés chassis."
- PRJ_medium_tank_equipment_2:0 "Wotarnial 301-Aħaŧehedekto"
- PRJ_medium_tank_equipment_2_short:0 "Wot/301-Aħz"
- PRJ_medium_tank_equipment_2_desc:0 "The Wot/301-Aħz was largely inspired on the versatile American Sherman tank. Designed more as a cheap and easily upgradable tank than a high-performance one, it proved itself rugged, but quite limited in how the crew operates. Complaints over the cramped turret and poor accessibility of the ammo rack made the tank's reputation among the army to be tarnished, and prompted numerous redesigns."
- PRJ_medium_tank_artillery_equipment_2:0 "Wotarnial 301-Hakanonrade"
- PRJ_medium_tank_artillery_equipment_2_short:0 "Wot/301-Hk"
- PRJ_medium_tank_artillery_equipment_2_desc:0 "The Wot/301-Hk was designed as a support vehicle for infantry divisions. Unlike its tank counterpart, it was spacious and confortable. It features a 145mm gun and an automatic ammunition elevator to assist reloading. Saw extensive use throughout the liberation of France, and supported numerous engagements."
- PRJ_medium_tank_destroyer_equipment_2:0 "Wotarnial 301-Hasexkiuxpanŧerade"
- PRJ_medium_tank_destroyer_equipment_2_short:0 "Wot/301-Hskp"
- PRJ_medium_tank_destroyer_equipment_2_desc:0 "The Wot/301-Hskp was a tank destroyer built from the Wot/301-Aħz tank. It features a large 100mm cannon, and a heavily sloped glacis armor, making it a very tough vehicle for frontal engagements."
- PRJ_medium_tank_aa_equipment_2:0 "Wotarnial 301-Haéirsexpleinrade"
- PRJ_medium_tank_aa_equipment_2_short:0 "Wot/301-Hés"
- PRJ_medium_tank_aa_equipment_2_desc:0 "Moved by the perceived necessity of a versatile and low cost, but fully armored, anti-air platform, the Atlantean Army ordered a new and modernized vehicle. Although it achieved its design demands, its fully encased crew compartment meant its visibility was severely limited, which restricted its intended usage as an anti-air vehicle. It was, however, very popular as an anti-infantry platform."
- PRJ_medium_tank_equipment_3:0 "Juzatzhait 801-Aħaŧehedekto"
- PRJ_medium_tank_equipment_3_short:0 "Juz/801-Aħz"
- PRJ_medium_tank_equipment_3_desc:0 "Seen as the pinnacle of the Juzatzhait design bureau's work, the Juz/801-Aħz became infamous among the German soldiers as a well-rounded sidekick to its larger counterpart, the Gud/423-Az-K. Powered by a heavy engine, it was fast and reasonably armored. It played a major role supporting the Atlantean infantry by flanking enemy defenses in Northern Germany."
- PRJ_medium_tank_artillery_equipment_3:0 "Juzatzhait 801-Hakanonrade"
- PRJ_medium_tank_artillery_equipment_3_short:0 "Juz/801-Hk"
- PRJ_medium_tank_artillery_equipment_3_desc:0 "A design based on the Juz/801-Aħz tank, was never produced in the World War 2. Instead, it was converted from the Atlantean arsenal in the Cold War to extend the usefulness of the then-obsolete Juz/801-Aħz medium tanks."
- PRJ_medium_tank_destroyer_equipment_3:0 "Juzatzhait 801-Aħaŧehedekto/120mm"
- PRJ_medium_tank_destroyer_equipment_3_short:0 "Juz/801-Aħz/120"
- PRJ_medium_tank_destroyer_equipment_3_desc:0 "Faced with the new heavily armored Tiger II and Elefant vehicles, the Atlantean Army issued an order for reconversion of the Juz/801-Aħz tanks to have its 75mm cannons replaced with more capable 120mm ones. It wasn't a true tank destroyer, but it filled this role in the field."
- PRJ_medium_tank_aa_equipment_3:0 "Juzatzhait 801-Haéirsexpleinrade"
- PRJ_medium_tank_aa_equipment_3_short:0 "Juz/801-Hés"
- PRJ_medium_tank_aa_equipment_3_desc:0 "The Juz/801-Hés was an experimental anti-air vehicle built from the Juz/801-Aħz's chassis. It never underwent mass production, but its new gun stabilizer and actuators made way into later more advanced anti-air vehicle designs."
+ PRJ_medium_tank_equipment_1:0 "Metasnwa 4 - Anibesa"
+ PRJ_medium_tank_equipment_1_short:0 "Anibesa"
+ PRJ_medium_tank_equipment_1_desc:0 "Produced from 1940 to 1942, the Anibesa was multipurpose tank meant to be able to handle the brute fighting against Anglo Atlantean Armor. Its Engine was designed with fuel effieciency in mind. Gave it unparalled range and stamina before it needed to refuel"
+ PRJ_medium_tank_artillery_equipment_1:0 "Metasnwa 4 - Tigardy Axiqan"
+ PRJ_medium_tank_artillery_equipment_1_short:0 "Mea/4-Yan"
+ PRJ_medium_tank_artillery_equipment_1_desc:0 "The Mea/4-Yan is the SPG variant of the Anibesa tank. It carries a 100mm short cannon."
+ PRJ_medium_tank_destroyer_equipment_1:0 "Metasnwa 4 - Bumietya Axiqan"
+ PRJ_medium_tank_destroyer_equipment_1_short:0 "Mea/4-Ban"
+ PRJ_medium_tank_destroyer_equipment_1_desc:0 "The Mea/4-Ban was a tank destroyer project. Never built, and is only known from blueprints."
+ PRJ_medium_tank_aa_equipment_1:0 "Metasnwa 4 - Kar-Hotwana"
+ PRJ_medium_tank_aa_equipment_1_short:0 "Mea/4-Kna"
+ PRJ_medium_tank_aa_equipment_1_desc:0 "Two 20mm cannons fitted in a rotating partially protected turret mounted over a Mea/4-Kna chassis."
+ PRJ_medium_tank_equipment_2:0 "Metasnwa 11 - Gutochi"
+ PRJ_medium_tank_equipment_2_short:0 "Gutochi"
+ PRJ_medium_tank_equipment_2_desc:0 "The Gutochi was the result of increasingly large numbers of enemy armament showing up. Building upon the fuel efficiency of the Anibesa further increasing its arnaments and spacious cabin for 6 men allowed it to control the battlefields of Northern front. Earning an infamous reputation from Atlanteans who were forced to face it."
+ PRJ_medium_tank_artillery_equipment_2:0 "Metasnwa 11 - Tigardy Axiqan"
+ PRJ_medium_tank_artillery_equipment_2_short:0 "Mea/11-Yan"
+ PRJ_medium_tank_artillery_equipment_2_desc:0 "The Mea/11-Yan was designed as a support vehicle for infantry divisions. It features a 120mm gun and an automatic ammunition elevator to assist reloading. Saw limited use throughout the war in Sudan."
+ PRJ_medium_tank_destroyer_equipment_2:0 "Metasnwa 11 - Bumietya Axiqan"
+ PRJ_medium_tank_destroyer_equipment_2_short:0 "Mea/11-Ban"
+ PRJ_medium_tank_destroyer_equipment_2_desc:0 "The Mea/11-Ban was was a tank destroyer project. Never built for lack of need, and is only known from blueprints."
+ PRJ_medium_tank_aa_equipment_2:0 "Metasnwa 11 - Kar-Hotwana"
+ PRJ_medium_tank_aa_equipment_2_short:0 "Mea/11-Kna"
+ PRJ_medium_tank_aa_equipment_2_desc:0 "Two 40mm cannons fitted in a rotating partially protected turret mounted over a Mea/4-Kna chassis."
+ PRJ_medium_tank_equipment_3:0 "Metasnwa 22 - Tekula"
+ PRJ_medium_tank_equipment_3_short:0 "Tekula"
+ PRJ_medium_tank_equipment_3_desc:0 "The Tekula and its prototypes were the upgraded versions of the Gutochi. Due to increasing material shortages and the subsequent armistace ment that it never got to see the light of day."
+ PRJ_medium_tank_artillery_equipment_3:0 "Metasnwa 22 - Tigardy Axiqan"
+ PRJ_medium_tank_artillery_equipment_3_short:0 Mea/22-Yan"
+ PRJ_medium_tank_artillery_equipment_3_desc:0 "A design based on the Tekula, was never produced in the World War 2 due to increasing material shortages and the subsequent armistace ment that it never got to see the light of day."
+ PRJ_medium_tank_destroyer_equipment_3:0 "Metasnwa 22 - Bumietya Axiqan"
+ PRJ_medium_tank_destroyer_equipment_3_short:0 "Mea/22-Ban"
+ PRJ_medium_tank_destroyer_equipment_3_desc:0 "The Mea/22-Ban was a tank destroyer project. Never built, and is only known from blueprints."
+ PRJ_medium_tank_aa_equipment_3:0 "Metasnwa 22 - Kar-Hotwana"
+ PRJ_medium_tank_aa_equipment_3_short:0 "Mea/22-Kna"
+ PRJ_medium_tank_aa_equipment_3_desc:0 "The Mea/22-Ban" was an experimental anti-air vehicle built from theTekula's chassis. It never underwent mass production, due to continuous Material shortages."
  PRJ_heavy_tank_equipment_1:0 "Gudarturak 023-Haaganitlepoliserade"
  PRJ_heavy_tank_equipment_1_short:0 "Gud/023-Hag"
  PRJ_heavy_tank_equipment_1_desc:0 "Produced from 1937 to 1941, this archaic design was Atlantis' choice for an armored vehicle to support its infantry battalions, as the new doctrine demanded. Ironically, for such a key vehicle in the army's doctrine, it never saw action, due to the fact that Atlantis had more modern tanks by the time the D-Day took place. Most were sold out to third-world nations."
