--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -258,7 +258,7 @@
  PRJ_light_med_tanks:0 "The Axiqan"
  PRJ_light_med_tanks_desc:0 "Axiqans will be the beating heart of an army, making decisive breakthroughs as the British did in the Great War. We must continue to advance the designs created by them in 1917." 
  PRJ_mechanization:0 "Mud Trucks"
- PRJ_mechanization_desc:0 "The battles we face happen on uneven terrain. By making mechanized trucks we can go through the most brutal of terrain, esoecially in the former provinces of Azania."
+ PRJ_mechanization_desc:0 "The battles we face happen on uneven terrain. By making mechanized trucks we can go through the most brutal of terrain, especially in the former provinces of Azania."
  PRJ_support:0 "Support Gear"
  PRJ_support_desc:0 "An army marches on its stomach, but it also needs modern support apparati like radios, medical supplies and shovels."
  PRJ_grand_plan:0 "Grand Planning"
