--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -424,3 +424,5 @@
  FMU_army_production:1 "Army Focus"
  FMU_white_immigration_laws:1 "White Immigration Laws"
  FMU_ache_of_war:1 "The Ache of War"
+ fmu.12.t:0 "Annex Schonland"
+ fmu.20.t:0 "Annex Vogelinsel"
