--- a/localisation/aml_tech_l_english.yml
+++ b/localisation/aml_tech_l_english.yml
@@ -602,7 +602,7 @@
   ######################################################################################################################################################################################################################
  
  
- MUU_infantry_equipment_0:0 "Mashiqit 8 Anshaj"
+ MUU_infantry_equipment_0:0 "Mashiqit 10 Anshaj"
  MUU_infantry_equipment_0_short:0 "M10-Anshaj"
  MUU_infantry_equipment_0_desc:0 "The M10-Anshaj was the shortened version of an older waterproof rifle called M8. It was widely used by the Muror army due to its versatility and adequacy in the marsh terrain that comprises most of the important cities of the country."
  MUU_infantry_equipment_1:0 "Mashiqit 12"
@@ -618,28 +618,28 @@
  MUU_infantry_at_desc:0 "The M13-Nb was a large rifle loaded with cermet core rounds, and made up the bulk of the infantry anti-tank capabilities for the Muror army. Even though not very powerful, the hard terrain of the country didn't make the threat of tanks very plausible, and the rifle was mainly used against light armor, where it excelled."
  MUU_infantry_at2:0 "Raqit 2 Nanabaril 'Ahushjeq'"
  MUU_infantry_at2_desc:0 "The Ahushjeq, Tilmu for 'arrow', was a powerful short ranged recoilless rifle that equipped the Muror army shortly after the end of the World War 2. It had a small bipod to help the shooter to aim."
- MUU_artillery_equipment_1:0 "75mm Hauijer Model 2"
- MUU_artillery_equipment_1_short:0 "75H-2"
- MUU_artillery_equipment_2:0 "100mm Hauijer Model 7"
- MUU_artillery_equipment_2_short:0 "100H-7"
- MUU_artillery_equipment_3:0 "150mm Ðurdihauijer Model 4"
- MUU_artillery_equipment_3_short:0 "150ÐH-4"
- MUU_anti_air_equipment_1:0 "20mm Nanajesajmashiqit Model 14"
- MUU_anti_air_equipment_1_short:0 "20NM-14"
- MUU_anti_air_equipment_2:0 "20mm Nanajesaj Sesemashqit Model 16"
- MUU_anti_air_equipment_2_short:0 "20N4M-16"
- MUU_anti_air_equipment_3:0 "45mm Nanajesaj Sehauijer Model 33"
- MUU_anti_air_equipment_3_short:0 "45N2H-33"
- MUU_anti_tank_equipment_1:0 "50mm Nanabarilhauijer 44-calibers Model 8"
- MUU_anti_tank_equipment_1_short:0 "50NH44-8"
- MUU_anti_tank_equipment_2:0 "70mm Nanabarilhauijer 40-calibers Model 12"
- MUU_anti_tank_equipment_2_short:0 "70NH40-12"
- MUU_anti_tank_equipment_3:0 "90mm Nanabarilhauijer 78-calibers Model 53"
- MUU_anti_tank_equipment_3_short:0 "90NH78-53"
- MUU_rocket_artillery_equipment_1:0 "Raqit"
- MUU_rocket_artillery_equipment_1_short:0 "1/08-Ħr"
- MUU_rocket_artillery_equipment_2:0 ""
- MUU_rocket_artillery_equipment_2_short:0 "1/98-Ħr"
+ MUU_artillery_equipment_1:0 "3|54 Sl.M Hauijer Model 2"
+ MUU_artillery_equipment_1_short:0 "3|54H-2"
+ MUU_artillery_equipment_2:0 "10|26 Sl.M Hauijer Model 7"
+ MUU_artillery_equipment_2_short:0 "10|26H-7"
+ MUU_artillery_equipment_3:0 "28|00 Sl.M Ðurdihauijer Model 4"
+ MUU_artillery_equipment_3_short:0 "28|00ÐH-4"
+ MUU_anti_air_equipment_1:0 "1|05 L.D Nanajesajmashiqit Model 14"
+ MUU_anti_air_equipment_1_short:0 "1|05NM-14"
+ MUU_anti_air_equipment_2:0 "1|05 L.D Nanajesaj Sesemashqit Model 16"
+ MUU_anti_air_equipment_2_short:0 "1|05N4M-16"
+ MUU_anti_air_equipment_3:0 "2|30 L.D Nanajesaj Sehauijer Model 33"
+ MUU_anti_air_equipment_3_short:0 "2|30N2H-33"
+ MUU_anti_tank_equipment_1:0 "2|54 L.D Nanabarilhauijer 44-calibers Model 8"
+ MUU_anti_tank_equipment_1_short:0 "2|54NH44-8"
+ MUU_anti_tank_equipment_2:0 "3|60 L.D Nanabarilhauijer 40-calibers Model 12"
+ MUU_anti_tank_equipment_2_short:0 "3|60NH40-12"
+ MUU_anti_tank_equipment_3:0 "4|70 L.D Nanabarilhauijer 78-calibers Model 53"
+ MUU_anti_tank_equipment_3_short:0 "4|70NH78-53"
+ MUU_rocket_artillery_equipment_1:0 "20|00 Sl.M Raqit Model 30"
+ MUU_rocket_artillery_equipment_1_short:0 "20|00R-30"
+ MUU_rocket_artillery_equipment_2:0 "20|00 Sl.M Unapjajraqit Model 71"
+ MUU_rocket_artillery_equipment_2_short:0 "20|00UR-71"
  MUU_motorized_equipment_1:0 "Yenámirtal 112"
  MUU_motorized_equipment_1_short:0 "Yen/112"
  MUU_motorized_equipment_1_desc:0 "The Model 112 is a popular vehicle produced by Yenámirtal Motors. It's a versatile all-purpose medium sized truck, adapted for military use."
