--- a/localisation/aml_decisions_l_english.yml
+++ b/localisation/aml_decisions_l_english.yml
@@ -73,9 +73,9 @@
  form_country_greenland_required_states_tt:0 "Controls Iceland."
  form_naf_category_desc:0 "Gaydr and his compatriots put forth a theory of a union between the nations of the northern Atlantic. A deal to be struck, to unite the region, but was blocked by foreign imperialists in 1898. Yet, now our time has come again; we shall form a strong bond in an act of solidarity between our brothers! Long live the federation!"
  Andamooka_canal:0 "The Andamooka Canal"
- Andamooka_canal_desc:0 "Description Please"
+ Andamooka_canal_desc:0 "The Andamooka Canal has been under construction since 1929, with the loft goal of connecting the inland Simpson Sea with the outside world. The Southern Canals were finished in 1935 leaving only the northern portion of the canals uncompleted. It is now time to finish the canal and finally connect our interior ports to the world!"
  blow_andamooka_canal:0 "Blow up Andamooka Canal"
- blow_andamooka_canal_desc:0 "words"
+ blow_andamooka_canal_desc:0 "To prevent troop movements between the Australian Bight and the Simpson Sea we will destroy the Andamooka Canal network."
  rebuild_andamooka_canal:0 "Rebuild Andamooka Canal"
- rebuild_andamooka_canal_desc:0 "nerd words" #Thursa over HEre
+ rebuild_andamooka_canal_desc:0 "One of the most important things that we can do for the development of the Australian interior surrounding the Simpson Sea would be to rebuild the Andamooka Canal network." #Thursa over HEre
  
