--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -186,7 +186,7 @@
  ATL_african_factories_2_desc:0 "Our colonies are self-sufficient. Now we can take full advantage of their capacity and construct a few military factories and dockyards in them."
  ATL_african_forts:0 "Fortify our African Cities"
  ATL_african_forts_desc:0 "With all the investments we've made it's paramount that we defend our African colonies to the last centimeter of land."
- ATL_african_airfields:0 "Colonial Air Force"
+ ATL_african_airfields:0 "Colonial Airfields"
  ATL_african_airfields_desc:0 "Our newly built air force can't operate in Africa due to the lack of proper runways. We will change this by building a few airstrips with the required infrastructure to support them."
  
  #######cosmetic tags
