--- a/localisation/aml_tech_l_english.yml
+++ b/localisation/aml_tech_l_english.yml
@@ -1051,7 +1051,7 @@
  PRJ_medium_tank_equipment_3_short:0 "Tekula"
  PRJ_medium_tank_equipment_3_desc:0 "The Tekula and its prototypes were the upgraded versions of the Gutochi. Due to increasing material shortages and the subsequent armistace ment that it never got to see the light of day."
  PRJ_medium_tank_artillery_equipment_3:0 "Metasnwa 22 - Tigardy Axiqan"
- PRJ_medium_tank_artillery_equipment_3_short:0 Mea/22-Yan"
+ PRJ_medium_tank_artillery_equipment_3_short:0 "Mea/22-Yan"
  PRJ_medium_tank_artillery_equipment_3_desc:0 "A design based on the Tekula, was never produced in the World War 2 due to increasing material shortages and the subsequent armistace ment that it never got to see the light of day."
  PRJ_medium_tank_destroyer_equipment_3:0 "Metasnwa 22 - Bumietya Axiqan"
  PRJ_medium_tank_destroyer_equipment_3_short:0 "Mea/22-Ban"
